[package]
name = "plock"
version = "0.1.0"
authors = ["Jonas Collberg <jonas.collberg@gmail.com>"]
edition = "2018"
repository = "https://github.com/joncol/plock"
license = "MIT OR Apache-2.0"
keywords = ["cli", "linux", "file", "tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-lock = "1.1"
structopt = "0.3"
